<resources>
    <string name="app_name">Multiplication: Learning the Facts</string>

    <string name="beginner">beginners</string>
    <string name="beginnerintro">intro</string>
    <string name="beginnerflashcard">flash cards</string>
    <string name="beginnerpractice">practice</string>

    <string name="flashcard">flash cards</string>
    <string name="practice">practice</string>
    <string name="timed">timed test</string>
    <string name="setting">settings</string>
    <string name="achievement">achievements</string>
    <string name="progress">progress</string>

    <string name="start">start</string>

    <string name="multiSym">x</string>
    <string name="equalSym">=</string>

    <string name="score">"Score: "</string>
    <string name="per">%</string>

    <string name="test">test</string>
    <string name="good_to_go">good to go</string>

    <string name="previous">prev</string>
    <string name="next">next</string>
    <string name="answer">ans</string>
    <string name="delete">delete</string>
    <string name="enter">enter</string>
    <string name="equal">=</string>

    <string name="tv2">TextView2</string>

    <string name="op1">nums[0]</string>

    <string name="butans">button</string>

    <string-array name="yourchicken">
        <item>answer</item>
        <item>answer-1</item>
        <item>answer+1</item>
        <item>op1*2</item>
    </string-array>


    <integer-array name="answerKey">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </integer-array>

    <integer-array name="num">
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </integer-array>

      <string name="val0">0</string>
      <string name="val1">1</string>
      <string name="val2">2</string>
      <string name="val3">3</string>
      <string name="val4">4</string>
      <string name="val5">5</string>
      <string name="val6">6</string>
      <string name="val7">7</string>
      <string name="val8">8</string>
      <string name="val9">9</string>
    <!--   <string name="val"></string>
       <string name="val"></string>
     <string name="val"></string>
       <string name="val"></string>
       <string name="val"></string>
    -->

</resources>
